SyntacticAnalyzer/tests/fail/ifelse02.java
class foo {
	ctor (int n1)
	var int n2;
	{
	 	if (n3 != 2)
			;
		else {
			if(n1%2 == 0) {
				n4 = 22;
			} else {
				// else no es una sentencia
				else ;
			}
	}
}
